# meteor-nc

./: CHANGELOG.md  License  MANIFEST.in  README.md  __init__.py  meteor_auth.py  meteor_auth_demo.py  meteor_nc_cpu.py  meteor_nc_gpu.py  meteor_nc_gpu2.py  meteor_nc_kdf.py  meteor_nc_string.py  meteor_nc_validation.py  meteor_protocol.py  meteor_protocol_advanced.py  meteor_web4.py  meteor_web4_complete.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  lint.yml  test.yml
auth/: __init__.py  core.py
block/: envelope.py
block/transport/: channel.py
block/wire/: __init__.py  envelope.py
cryptography/: String.py  __init__.py  core.py  core_cpu.py  kdf.py  kdf_cpu.py  string.py
examples/: Choleskyoptimization.py  GPUScalingBenchmark.py  MeteorNC_CPUTestSuite.py  Parallel_Implementation.py  batchPerformance.py  benchmark_comparison.py
meteor_nc/: __init__.py
meteor_nc/auth/: __init__.py  core.py
meteor_nc/block/: README.md  __init__.py  suites.py
meteor_nc/block/adapters/: __init__.py  base.py  metamask.py  walletconnect.py
meteor_nc/block/mempool/: __init__.py  encrypt.py  shield.py
meteor_nc/block/meteor_nc/block/registry/: PKRegistry.json  PKRegistry.sol  pk_store.py
meteor_nc/block/registry/: __init__.py  resolver.py
meteor_nc/block/tests/: __init__.py  test_integration.py
meteor_nc/block/transport/: __init__.py  channel.py  rpc.py  wallet.py
meteor_nc/block/wire/: __init__.py  envelope.py
meteor_nc/cryptography/: __init__.py  _core.py  batch.py  common.py  compression.py  core.py  core_v2.py  kdf.py  practical.py  stream.py  string.py
meteor_nc/cryptography/kernels/: __init__.py  batch_kernels.py  batch_kernels_v2.py  blake3_kernel.py  blake3_kernel_v2.py  chacha_poly_kernel.py
meteor_nc/protocols/: __init__.py  advanced.py  basic.py  meteor_protocol.py  web4.py
p2p/: MeteorProtocol.py
protocols/: advance.py
tests/: __init__.py  benchmark_gpu_scaling.py  test_advanced_web4.py  test_auth_demo.py  test_basic_protocol.py  test_batch.py  test_batch_sidechannel.py  test_benchmark_comparison.py  test_core.py  test_integrated.py  test_integration.py  test_paper_claims.py  test_security_validation.py  test_sidechannel.py  test_stream.py  test_string_encryption.py
