[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meteor-nc"
version = "1.0.0"
description = "High-Performance Post-Quantum Cryptosystem from Non-Commutative Matrix Groups"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Anonymous", email = "anonymous@example.com"}  # For blind review
]
maintainers = [
    {name = "Anonymous", email = "anonymous@example.com"}  # For blind review
]
requires-python = ">=3.8"
keywords = [
    "cryptography",
    "post-quantum",
    "pqc",
    "encryption",
    "non-commutative",
    "matrix-groups",
    "gpu",
    "high-performance",
    "quantum-resistant",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "cryptography>=3.4.0",
]

[project.optional-dependencies]
gpu = [
    "cupy-cuda11x>=10.0.0",
]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.0.0",
    "black>=21.0",
    "flake8>=3.9.0",
    "mypy>=0.900",
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=0.5.0",
]
web4 = [
    "ipfshttpclient>=0.8.0",
    "pynacl>=1.5.0",
]
all = [
    "cupy-cuda11x>=10.0.0",
    "pytest>=6.0.0",
    "pytest-cov>=2.0.0",
    "black>=21.0",
    "flake8>=3.9.0",
    "mypy>=0.900",
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=0.5.0",
    "ipfshttpclient>=0.8.0",
    "pynacl>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/anonymous/meteor-nc"
Documentation = "https://github.com/anonymous/meteor-nc#readme"
Repository = "https://github.com/anonymous/meteor-nc"
Issues = "https://github.com/anonymous/meteor-nc/issues"

[project.scripts]
meteor-nc = "meteor_nc.cli:main"

[tool.setuptools]
packages = ["meteor_nc", "meteor_nc.cryptography", "meteor_nc.protocols"]
include-package-data = true

[tool.setuptools.package-data]
meteor_nc = ["py.typed"]

# Black configuration
[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

# MyPy configuration
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

# Coverage configuration
[tool.coverage.run]
source = ["meteor_nc"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
